// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle SET_TITLE 1`] = `
Object {
  "title": "Client Side Rendering",
}
`;

exports[`should return the initial state 1`] = `
Object {
  "title": "",
}
`;
